tests/language_modules/04_types/invalid_semantics/keyword_type_name.vf
module KeywordTypeName

type module is Integer

end KeywordTypeName